<resources>
    <string name="app_name">CocCheck</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- GENERAL -->
    <string name="null_field">-</string>

    <!-- ERROR TOAST -->
    <string name="bad_request">Bad request. Please modify the request.</string>
    <string name="unauthorized_request">You are not authorized to send this request.</string>
    <string name="resource_not_found">%1$s not found.</string>
    <string name="too_many_requests">You have sent too many requests. Please calm down.</string>
    <string name="server_maintenance">We are sorry, the server is under maintenance.</string>
    <string name="server_error">Server error.</string>
    <string name="error_toast_layout_placeholder">Something is wrong. I can feel it.</string>

    <!-- PLAYERS -->
    <string name="players">Players</string>
    <string name="player">Player</string>
    <string name="players_search_hint">Search players by tag</string>
    <string name="townhall_label">Townhall:</string>
    <string name="trophies_label">Trophies:</string>
    <string name="best_trophies_label">Best trophies:</string>
    <string name="experience_level_label">Experience level:</string>
    <string name="clan_label">Clan:</string>
    <string name="role_label">Role:</string>
    <string name="war_stars_label">War stars:</string>
    <string name="townhall_layout_placeholder">8</string>
    <string name="trophies_layout_placeholder">4200</string>
    <string name="best_trophies_layout_placeholder">4200</string>
    <string name="experience_level_layout_placeholder">69</string>
    <string name="clan_layout_placeholder">The Clan</string>
    <string name="role_layout_placeholder">Leader</string>
    <string name="war_stars_layout_placeholder">560</string>

    <!-- CLAN -->
    <string name="clans">Clans</string>
    <string name="clan">Clan</string>
    <string name="clans_search_hint">Search clans by tag</string>
    <string name="location_label">Location:</string>
    <string name="members_label">Members:</string>
    <string name="points_label">Total Points:</string>
    <string name="wars_won_label">Wars Won:</string>
    <string name="war_frequency_label">War Frequency:</string>
    <string name="type_label">Type:</string>
    <string name="required_trophies_label">Required Trophies:</string>
    <string name="name_layout_placeholder">Name</string>
    <string name="tag_layout_placeholder">Tag</string>
    <string name="location_layout_placeholder">United States</string>
    <string name="members_layout_placeholder">15</string>
    <string name="points_layout_placeholder">6027</string>
    <string name="wars_won_layout_placeholder">137</string>
    <string name="war_frequency_layout_placeholder">Always</string>
    <string name="type_layout_placeholder">Closed</string>
    <string name="required_trophies_layout_placeholder">0</string>

    <!-- LOCATION -->
    <string name="locations">Locations</string>
    <string name="location">Location</string>
    <string name="locations_search_hint">Find the top 10 clans in a location</string>
    <string name="clan_level_label">Clan level:</string>
    <string name="rank_label">Rank:</string>
    <string name="previous_rank_label">Previous rank:</string>
    <string name="clan_level_layout_placeholder">420</string>
    <string name="rank_layout_placeholder">1</string>
    <string name="previous_rank_layout_placeholder">1</string>
</resources>