<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="24sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_below="@id/name"
        android:text="@string/tag_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
    />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/tag"
        android:text="@string/location_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
    />
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tag"
        android:layout_toEndOf="@id/locationLabel"
        android:layout_marginStart="4dp"
        android:text="@string/location_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/membersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/locationLabel"
        android:text="@string/members_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
    />
    <TextView
        android:id="@+id/members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationLabel"
        android:layout_toEndOf="@id/membersLabel"
        android:layout_marginStart="4dp"
        android:text="@string/members_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/pointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/membersLabel"
        android:text="@string/points_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
    />
    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/membersLabel"
        android:layout_toEndOf="@id/pointsLabel"
        android:layout_marginStart="4dp"
        android:text="@string/points_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/warsWonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/pointsLabel"
        android:text="@string/wars_won_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
    />
    <TextView
        android:id="@+id/warsWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pointsLabel"
        android:layout_toEndOf="@id/warsWonLabel"
        android:layout_marginStart="4dp"
        android:text="@string/wars_won_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/warFrequencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/warsWonLabel"
        android:text="@string/war_frequency_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
    />
    <TextView
        android:id="@+id/warFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/warsWonLabel"
        android:layout_toEndOf="@id/warFrequencyLabel"
        android:layout_marginStart="4dp"
        android:text="@string/war_frequency_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/warFrequencyLabel"
        android:text="@string/type_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
    />
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/warFrequencyLabel"
        android:layout_toEndOf="@id/typeLabel"
        android:layout_marginStart="4dp"
        android:text="@string/type_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/requiredTrophiesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/typeLabel"
        android:text="@string/required_trophies_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
    />
    <TextView
        android:id="@+id/requiredTrophies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeLabel"
        android:layout_toEndOf="@id/requiredTrophiesLabel"
        android:layout_marginStart="4dp"
        android:text="@string/required_trophies_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        />
</RelativeLayout>