<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    >
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_below="@id/name"
        android:text="@string/tag_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/townhallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/tag"
        android:text="@string/townhall_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/townhall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tag"
        android:layout_toEndOf="@id/townhallLabel"
        android:layout_marginStart="4dp"
        android:text="@string/townhall_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/trophiesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/townhallLabel"
        android:text="@string/trophies_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/trophies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/townhallLabel"
        android:layout_toEndOf="@id/trophiesLabel"
        android:layout_marginStart="4dp"
        android:text="@string/trophies_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/bestTrophiesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/trophiesLabel"
        android:text="@string/best_trophies_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/bestTrophies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/trophiesLabel"
        android:layout_toEndOf="@id/bestTrophiesLabel"
        android:layout_marginStart="4dp"
        android:text="@string/best_trophies_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/experienceLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/bestTrophiesLabel"
        android:text="@string/experience_level_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/experienceLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bestTrophiesLabel"
        android:layout_toEndOf="@id/experienceLevelLabel"
        android:layout_marginStart="4dp"
        android:text="@string/experience_level_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/clanLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/experienceLevelLabel"
        android:text="@string/clan_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/clan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/experienceLevelLabel"
        android:layout_toEndOf="@id/clanLabel"
        android:layout_marginStart="4dp"
        android:text="@string/clan_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/roleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/clanLabel"
        android:text="@string/role_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clanLabel"
        android:layout_toEndOf="@id/roleLabel"
        android:layout_marginStart="4dp"
        android:text="@string/role_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/warStarsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/roleLabel"
        android:text="@string/war_stars_label"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/warStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/roleLabel"
        android:layout_toEndOf="@id/warStarsLabel"
        android:layout_marginStart="4dp"
        android:text="@string/war_stars_layout_placeholder"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        />
</RelativeLayout>