<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="16dp"
    >

    <RelativeLayout
        android:id="@+id/clan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        >
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_layout_placeholder"
            android:textColor="@color/text_black"
            android:textSize="24sp"
            android:textStyle="bold"
        />

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_below="@id/name"
            android:text="@string/tag_layout_placeholder"
            android:textColor="@color/text_black"
            android:textSize="16sp"
        />

        <TextView
            android:id="@+id/clanLevelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/tag"
            android:text="@string/clan_level_label"
            android:textColor="@color/text_black"
            android:textSize="16sp"
        />
        <TextView
            android:id="@+id/clanLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag"
            android:layout_toEndOf="@id/clanLevelLabel"
            android:layout_marginStart="4dp"
            android:text="@string/clan_level_layout_placeholder"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <TextView
            android:id="@+id/membersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/clanLevelLabel"
            android:text="@string/members_label"
            android:textColor="@color/text_black"
            android:textSize="16sp"
        />
        <TextView
            android:id="@+id/members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clanLevelLabel"
            android:layout_toEndOf="@id/membersLabel"
            android:layout_marginStart="4dp"
            android:text="@string/members_layout_placeholder"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <TextView
            android:id="@+id/clanPointsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/membersLabel"
            android:text="@string/points_label"
            android:textColor="@color/text_black"
            android:textSize="16sp"
        />
        <TextView
            android:id="@+id/clanPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/membersLabel"
            android:layout_toEndOf="@id/clanPointsLabel"
            android:layout_marginStart="4dp"
            android:text="@string/points_layout_placeholder"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <TextView
            android:id="@+id/rankLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/clanPointsLabel"
            android:text="@string/rank_label"
            android:textColor="@color/text_black"
            android:textSize="16sp"
        />
        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clanPointsLabel"
            android:layout_toEndOf="@id/rankLabel"
            android:layout_marginStart="4dp"
            android:text="@string/rank_layout_placeholder"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <TextView
            android:id="@+id/previousRankLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/rankLabel"
            android:text="@string/previous_rank_label"
            android:textColor="@color/text_black"
            android:textSize="16sp"
        />
        <TextView
            android:id="@+id/previousRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rankLabel"
            android:layout_toEndOf="@id/previousRankLabel"
            android:layout_marginStart="4dp"
            android:text="@string/previous_rank_layout_placeholder"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:textStyle="bold"
        />
    </RelativeLayout>

</androidx.cardview.widget.CardView>